[gd_scene load_steps=5 format=3 uid="uid://bn4823ohboe0b"]

[ext_resource type="Script" path="res://prefabs/physics_object/Item.gd" id="1_d13tc"]
[ext_resource type="Texture2D" uid="uid://dy8glw44koni4" path="res://food_images/Pizza.png" id="2_go086"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aj7rj"]
size = Vector2(164, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hu67m"]
size = Vector2(133, 132)

[node name="BaseItem" type="RigidBody2D"]
script = ExtResource("1_d13tc")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.0559657, 0.0524694)
texture = ExtResource("2_go086")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_aj7rj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_hu67m")
debug_color = Color(0.976471, 0, 0.411765, 0.419608)

[connection signal="mouse_entered" from="InteractionArea" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="on_mouse_exit"]
